update date fns

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"cheerio": "^1.0.0-rc.12",
 		"daisyui": "^2.51.5",
 		"date-fns": "^2.29.3",
+		"date-fns-tz": "^2.0.0",
 		"date-picker-svelte": "^2.2.5",
 		"highlight-words": "^1.2.1",
 		"just-debounce-it": "^3.2.0",
