add option to send email by user id

--- a/.env template
+++ b/.env template
@@ -1,6 +1,7 @@
 SUPABSE_DB_PWD=
 PUBLIC_SUPABASE_URL=
 PUBLIC_SUPABASE_ANON_KEY=
+SUPABSE_SERVICE_ROLE_KEY=
 
 SENDGRID_API_KEY=
 SENDGRID_VERIFIED_SENDER=
