--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@supabase/supabase-js": "^2.8.0",
 		"@zerodevx/svelte-toast": "^0.9.3",
 		"axios": "^1.4.0",
+		"browser-image-compression": "^2.0.2",
 		"cheerio": "^1.0.0-rc.12",
 		"daisyui": "^2.51.5",
 		"date-fns": "^2.29.3",
