--- a/.env template
+++ b/.env template
@@ -1,7 +1,9 @@
 SUPABSE_DB_PWD=
+SUPABSE_SERVICE_ROLE_KEY=
 PUBLIC_SUPABASE_URL=
 PUBLIC_SUPABASE_ANON_KEY=
-SUPABSE_SERVICE_ROLE_KEY=
 
 SENDGRID_API_KEY=
 SENDGRID_VERIFIED_SENDER=
+
+PUBLIC_SENTRY_DSN=
