--- a/package.json
+++ b/package.json
@@ -33,14 +33,12 @@
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.2.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@sendgrid/mail": "^7.7.0",
-		"@sentry/node": "^7.39.0",
-		"@sentry/svelte": "^7.39.0",
-		"@sentry/tracing": "^7.39.0",
+		"@sentry/sveltekit": "^7.53.1",
 		"@supabase/auth-helpers-sveltekit": "^0.9.4",
 		"@supabase/realtime-js": "^2.6.0",
 		"@supabase/supabase-js": "^2.8.0",
