--- a/package.json
+++ b/package.json
@@ -42,6 +42,13 @@
 		"@supabase/auth-helpers-sveltekit": "^0.9.4",
 		"@supabase/realtime-js": "^2.6.0",
 		"@supabase/supabase-js": "^2.8.0",
+		"@tiptap/core": "^2.0.4",
+		"@tiptap/extension-code-block-lowlight": "^2.0.4",
+		"@tiptap/extension-document": "^2.0.4",
+		"@tiptap/extension-paragraph": "^2.0.4",
+		"@tiptap/extension-text": "^2.0.4",
+		"@tiptap/pm": "^2.0.4",
+		"@tiptap/starter-kit": "^2.0.4",
 		"@zerodevx/svelte-toast": "^0.9.3",
 		"axios": "^1.4.0",
 		"browser-image-compression": "^2.0.2",
@@ -51,7 +58,9 @@
 		"date-fns-tz": "^2.0.0",
 		"date-picker-svelte": "^2.2.5",
 		"highlight-words": "^1.2.1",
+		"highlight.js": "^11.8.0",
 		"just-debounce-it": "^3.2.0",
+		"lowlight": "^2.9.0",
 		"meilisearch": "^0.30.0",
 		"showdown": "^2.1.0",
 		"universal-cookie": "^4.0.4"
