--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
 		"@tiptap/core": "^2.0.4",
 		"@tiptap/extension-code-block-lowlight": "^2.0.4",
 		"@tiptap/extension-document": "^2.0.4",
+		"@tiptap/extension-floating-menu": "^2.0.4",
 		"@tiptap/extension-paragraph": "^2.0.4",
+		"@tiptap/extension-placeholder": "^2.0.4",
 		"@tiptap/extension-text": "^2.0.4",
+		"@tiptap/extension-typography": "^2.0.4",
 		"@tiptap/pm": "^2.0.4",
 		"@tiptap/starter-kit": "^2.0.4",
 		"@zerodevx/svelte-toast": "^0.9.3",
