--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.8",
+		"@types/debounce": "^1.2.1",
 		"@types/showdown": "^2.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -60,6 +61,7 @@
 		"date-fns": "^2.29.3",
 		"date-fns-tz": "^2.0.0",
 		"date-picker-svelte": "^2.2.5",
+		"debounce": "^1.2.1",
 		"highlight-words": "^1.2.1",
 		"highlight.js": "^11.8.0",
 		"just-debounce-it": "^3.2.0",
