--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@tiptap/extension-code-block-lowlight": "^2.0.4",
 		"@tiptap/extension-document": "^2.0.4",
 		"@tiptap/extension-floating-menu": "^2.0.4",
+		"@tiptap/extension-link": "^2.1.10",
 		"@tiptap/extension-paragraph": "^2.0.4",
 		"@tiptap/extension-placeholder": "^2.0.4",
 		"@tiptap/extension-text": "^2.0.4",
