--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
 		"@tiptap/extension-link": "^2.1.10",
 		"@tiptap/extension-paragraph": "^2.0.4",
 		"@tiptap/extension-placeholder": "^2.0.4",
+		"@tiptap/extension-table": "^2.1.12",
+		"@tiptap/extension-table-cell": "^2.1.12",
+		"@tiptap/extension-table-header": "^2.1.12",
+		"@tiptap/extension-table-row": "^2.1.12",
 		"@tiptap/extension-text": "^2.0.4",
 		"@tiptap/extension-typography": "^2.0.4",
 		"@tiptap/pm": "^2.0.4",
